--- a/fdm_app/templates/base.html
+++ b/fdm_app/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gestion des Frais de Mission</title>
+  <title> Frais de Mission</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -15,7 +15,7 @@
     <div class="sidebar" id="sidebar">
         <div class="logo">
 
-            <span class="ms-2">Frais de mission</span>
+            <span class="ms-2">Frais de mission nouveau</span>
             <button class="btn-toggle-sidebar ms-auto" id="toggleSidebar">
                 <i class="fas fa-bars"></i>
             </button>
