--- a/fdm_app/templates/edit_mission_modal.html
+++ b/fdm_app/templates/edit_mission_modal.html
@@ -13,6 +13,10 @@
           <form method="POST" action="{% url 'edit_mission' mission.id %}">
   
             {% csrf_token %}
+            <div class="mb-3">
+              <label class="form-label"> Lien Bluedesk </label>
+              <input type="text" class="form-control" name="bluedesk_link" value="{{mission.bluedesk_link}}" min="0">
+            </div>
             <h6 class="mt-4 mb-3">
               <b><font size="4" color="#4558c9">Lieu et techniciens</font></b>
             </h6>
