--- a/fdm_app/static/css/style.css
+++ b/fdm_app/static/css/style.css
@@ -342,3 +342,14 @@ margin-top: 15px;
 .main-content.expanded {
   margin-left: 70px;
 }
+
+
+.table-container {
+  max-height: 400px; /* Ajustez la hauteur pour afficher 10 lignes */
+  overflow-y: auto; /* Active le défilement vertical */
+}
+
+.table {
+  table-layout: fixed; /* Fixe la largeur des colonnes */
+  width: 100%;
+}
