--- a/fdm_app/templates/account.html
+++ b/fdm_app/templates/account.html
@@ -1,3 +1,4 @@
+<!--en tête de l'application -->
 <div class="card mb-4">
     <div class="card-body">
       <h5 class="card-title">My Account Settings</h5>
@@ -10,6 +11,7 @@
             </div>
           </div>
         </div>
+      <!--
         <div class="col-md-3">
           <div class="card bg-info text-white">
             <div class="card-body text-center">
@@ -34,6 +36,7 @@
             </div>
           </div>
         </div>
+        -->
       </div>
     </div>
   </div>
