--- a/fdm_app/templates/index.html
+++ b/fdm_app/templates/index.html
@@ -60,6 +60,9 @@
                 <th>Actions</th>
               </tr>
             </thead>
+
+
+          
             <tbody>
 
               <!-- Vue du tableau des données sur la mission -->
@@ -99,10 +102,13 @@
 
                   {% endif %}
                 </td>
-               
+            
 
                 <!-- Icon de valider ,mise à jour, details et refuser -->
+                
                 <td class="action-icons">
+                  <!-- Icone pour valider la mission -->
+                  {% if user.is_authenticated and perms.fdm_app.can_validate_mission %}
                   <i class="fas fa-check-circle validate"
                     data-bs-toggle="modal"
                     data-bs-target="#validateModal"
@@ -115,20 +121,28 @@
                      data-mission-id = "{{ mission.id }}"
                      title = "Refuser">
                   </i>
+                  {% endif %}
                   <i class="fas fa-info-circle details" 
                   data-bs-toggle="modal" 
                   data-bs-target="#detailModal{{ mission.id }}" 
                   title="Détails">
                    </i>
+
+
+                  {% if user.is_authenticated and not perms.fdm_app.can_validate_mission %}
                 <!-- Bouton pour modifier la mission -->
                    <i class="fas fa-edit edit" 
                      data-bs-toggle="modal" 
                      data-bs-target="#editMissionModal{{ mission.id }}" 
                      title="Modifier">
                   </i>
+                  {% endif %}
                 </td>
+              </tr>
+
               {% endfor %}
 
+               
             </tbody>
           </table>
         </div>
@@ -193,8 +207,8 @@
             {% csrf_token %}
             <!--lien bluedesk Odoo de la mission-->
             <div class="mb-3">
-              <label class="form-label"> Lien Bluedesk </label>
-              <input type="text" class="form-control" name="bluedesk_link" min="0">
+              <label class="form-label" > Lien Bluedesk </label>
+              <input type="text" class="form-control" name="bluedesk_link" placeholder="insérer le lien bluedesk ici" min="0">
             </div>
             <!--lieu et technicien de la mission-->
             <h6 class="mt-4 mb-3">
