--- a/fdm_app/templates/account.html
+++ b/fdm_app/templates/account.html
@@ -1,44 +1,36 @@
-<!--en tête de l'application -->
+<!--EN TÊTE DE L'APPLICATION-->
 <div class="card mb-4">
-    <div class="card-body">
-      <h5 class="card-title">My Account Settings</h5>
-      <div class="row mt-4">
-        <div class="col-md-3">
-          <div class="card bg-primary text-white">
-            <div class="card-body text-center">
-              <i class="fas fa-user-circle mb-2 fa-2x"></i>
-              <p class="mb-0 small">{{ user.username }}</p>
-            </div>
+  <div class="card-body">
+    <div class="row mt-4">
+      <div class="col-md-3">
+        <!--nom de l'utilisateur -->
+        <div class="card bg-primary text-white">
+          <div class="card-body text-center">
+            <i class="fas fa-user-circle mb-2 fa-2x"></i>
+            <p class="mb-0 small">{{ user.username }}</p>
           </div>
         </div>
-      <!--
-        <div class="col-md-3">
-          <div class="card bg-info text-white">
-            <div class="card-body text-center">
-              <i class="fas fa-key mb-2 fa-2x"></i>
-              <p class="mb-0 small">ACCESS CONTROL</p>
-            </div>
-          </div>
+      </div>
+      <div class="col-md-9 d-flex align-items-center">
+        <div class="export-buttons w-100">
+          <!--print-->
+          <a href="#" class="btn btn-outline-success me-2 mb-2">
+            <i class="fas fa-file-csv mr-1"></i> CSV
+          </a>
+          <!--excel-->
+          <a href="#" class="btn btn-outline-primary me-2 mb-2">
+            <i class="fas fa-file-excel mr-1"></i> Excel
+          </a>
+          <!--pdf-->
+          <a href="{% url 'export_pdf' %}" class="btn btn-outline-danger me-2 mb-2">
+            <i class="fas fa-file-pdf mr-1"></i> PDF
+          </a>
+          <!--print-->
+          <button type="button" class="btn btn-outline-dark mb-2" onclick="window.print();">
+            <i class="fas fa-print mr-1"></i> Print
+          </button>
         </div>
-        <div class="col-md-3">
-          <div class="card bg-success text-white">
-            <div class="card-body text-center">
-              <i class="fas fa-code-branch mb-2 fa-2x"></i>
-              <p class="mb-0 small">CODE REPOSITORIES</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card bg-warning text-white">
-            <div class="card-body text-center">
-              <i class="fas fa-credit-card mb-2 fa-2x"></i>
-              <p class="mb-0 small">PAYMENTS</p>
-            </div>
-          </div>
-        </div>
-        -->
       </div>
     </div>
   </div>
-
-  
+</div>
