--- a/fdm_app/templates/detail_modal.html
+++ b/fdm_app/templates/detail_modal.html
@@ -217,7 +217,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-        <button type="button" class="btn btn-primary">Télécharger PDF</button>
+        <a href="{% url 'download_pdf' mission.id %}" class="btn btn-primary">Télécharger PDF </a>
       </div>
     </div>
   </div>
