--- a/fdm_app/templates/index.html
+++ b/fdm_app/templates/index.html
@@ -81,9 +81,9 @@
                 <td>{{ mission.end_date|date:"d F Y" }} à {{ mission.end_hour|time:"H:i" }}</td>
 
                 {% if mission.facturation %}
-                <td><span class="badge badge-billed" style="background-color:#28a745;">Facturé</span></td>
+                <td><span class="badge badge-billed" style="background-color: #4CAF50;">Facturé</span></td>
                 {% else %}
-                <td><span class="badge badge-not-billed" style="background-color:red;">Non facturé</span></td>
+                <td><span class="badge badge-not-billed" style="background-color: #EF5350;">Non facturé</span></td>
                 {% endif %}
 
                 {% for expense in mission.depenses.all %}
@@ -94,11 +94,11 @@
                
                 <td>
                   {% if mission.status == "NEW" %}
-                    <span class="badge badge-new" style="background-color:#4688A3">nouveau</span>
+                    <span class="badge badge-new" style="background-color: #4688A3">nouveau</span>
                   {% elif mission.status == "REFUSED" %}
-                    <span class="badge badge-refused" style="background-color: red;">refusée</span>
+                    <span class="badge badge-refused" style="background-color: #EF5350;">refusée</span>
                   {% elif mission.status == "VALIDATED" %}
-                    <span class="badge badge-validated" style="background-color: green;">validée</span>
+                    <span class="badge badge-validated" style="background-color: #81C784;">validée</span>
 
                   {% endif %}
                 </td>
@@ -207,7 +207,7 @@
             {% csrf_token %}
             <!--lien bluedesk Odoo de la mission-->
             <div class="mb-3">
-              <label class="form-label" > Lien Bluedesk </label>
+              <b><font size="4" color="#4558c9">Lien Bluedesk</font></b>
               <input type="text" class="form-control" name="bluedesk_link" placeholder="insérer le lien bluedesk ici" min="0">
             </div>
             <!--lieu et technicien de la mission-->
