--- a/fdm_app/templates/missions_pdf_export.html
+++ b/fdm_app/templates/missions_pdf_export.html
@@ -50,15 +50,15 @@
             background-color: #f2f2f2;
         }
         .status-VALIDATED {
-            color: #27ae60;
+            color: #81C784;
             font-weight: bold;
         }
         .status-NEW {
-            color: #f39c12;
+            color: #4688A3;
             font-weight: bold;
         }
         .status-REFUSED {
-            color: #e74c3c;
+            color: #EF5350;
             font-weight: bold;
         }
         .footer {
