--- a/fdm_app/templates/account.html
+++ b/fdm_app/templates/account.html
@@ -22,24 +22,25 @@
       </div>
       
       <!--export des fichiers -->
-      <div class="col-md-6 d-flex align-items-center justify-content-center">  <!-- Ajout de justify-content-center -->
+      <div class="col-md-7 d-flex align-items-center justify-content-center">  <!-- Ajout de justify-content-center -->
         <div class="export-buttons w-100 text-center">  <!-- Ajout de text-center -->
           <!--csv-->
           <a href="#" class="btn btn-outline-success me-2 mb-2">
             <i class="fas fa-file-csv mr-1"></i> CSV
           </a>
           <!--excel-->
-          <a href="#" class="btn btn-outline-primary me-2 mb-2">
+          <a href="{% url 'export_excel' %}" class="btn btn-outline-primary me-2 mb-2">
             <i class="fas fa-file-excel mr-1"></i> Excel
           </a>
           <!--pdf-->
           <a href="{% url 'export_pdf' %}" class="btn btn-outline-danger me-2 mb-2">
             <i class="fas fa-file-pdf mr-1"></i> PDF
           </a>
-          <!--print-->
+          <!--print--> <!--
           <button type="button" class="btn btn-outline-dark mb-2" onclick="window.print();">
             <i class="fas fa-print mr-1"></i> Print
           </button>
+          -->
         </div>
       </div>
     </div>
