--- a/fdm_app/templates/account.html
+++ b/fdm_app/templates/account.html
@@ -25,7 +25,7 @@
       <div class="col-md-7 d-flex align-items-center justify-content-center">  <!-- Ajout de justify-content-center -->
         <div class="export-buttons w-100 text-center">  <!-- Ajout de text-center -->
           <!--csv-->
-          <a href="#" class="btn btn-outline-success me-2 mb-2">
+          <a href="{% url 'export_csv' %}" class="btn btn-outline-success me-2 mb-2">
             <i class="fas fa-file-csv mr-1"></i> CSV
           </a>
           <!--excel-->
