--- a/fdm_app/templates/account.html
+++ b/fdm_app/templates/account.html
@@ -36,6 +36,11 @@
           <a href="{% url 'export_pdf' %}" class="btn btn-outline-danger me-2 mb-2">
             <i class="fas fa-file-pdf mr-1"></i> PDF
           </a>
+          <!--word-->
+          <a href="{% url 'export_docx' %}" class="btn btn-outline-info me-2 mb-2">
+            <i class="fas fa-file-word mr-1"></i> Word
+          </a>
+
           <!--print--> <!--
           <button type="button" class="btn btn-outline-dark mb-2" onclick="window.print();">
             <i class="fas fa-print mr-1"></i> Print
